# paperlm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: benchmark_report.py  day2_baseline.md  day2_compare.py  day5_phase3_perf.py  phase3_perf.md  phase4_integration.md  phase4_rss_probe.md  phase5_competitor_compare.py  phase5_competitor_framework.md  phase5_competitor_matrix.md  phase6_quality_probe.py  phase6_quality_report.md  phase7_ocr_confidence_probe.py  phase7_ocr_confidence_report.md  phase8_long_pdf_perf_probe.py  phase8_long_pdf_perf_report.md  phase9_worker_pool_probe.py  phase9_worker_pool_report.md  process_guard.py  w4d1_rss_probe.py  w4d4_showcase.py  w4d5_integration_sweep.py
benchmarks/reports/: latest.json  latest.md
docs/: POLISH_PLAN.md  RELEASE.md
docs/blog/: launch_en.md  launch_zh.md
docs/release_notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md
scripts/: clean.sh
src/markitdown_paperlm/: __init__.py  _pdf_converter.py  _plugin.py  ir.py  router.py
src/markitdown_paperlm/cli/: __init__.py  batch.py  tools.py
src/markitdown_paperlm/engines/: __init__.py  base.py  docling_adapter.py  fallback_adapter.py  ocr_adapter.py
src/markitdown_paperlm/serializers/: __init__.py  captions.py  front_matter.py  heading_hierarchy.py  json_sidecar.py  markdown.py  numbered_sections.py  reading_order.py  tables.py  text_normalize.py
src/markitdown_paperlm/utils/: __init__.py  scanned_detector.py
src/markitdown_paperlm/workers/: __init__.py  docling_pool.py  docling_worker.py
src/paperlm/: __init__.py
tests/: test_batch_cli.py  test_benchmark_report.py  test_caption_linking.py  test_docling_adapter.py  test_docling_worker_pool.py  test_edge_coverage.py  test_engine_base.py  test_fallback_adapter.py  test_fixture_smoke.py  test_formula_detection.py  test_front_matter.py  test_heading_hierarchy.py  test_ir.py  test_json_sidecar.py  test_long_pdf_perf_probe.py  test_numbered_sections.py  test_ocr_adapter.py  test_ocr_confidence.py  test_ocr_confidence_probe.py  test_pdf_converter_e2e.py  test_phase5_guardrails.py  test_plugin_registration.py  test_process_guard.py  test_public_import_alias.py  test_quality_probe.py  test_reading_order.py  test_router.py  test_scanned_detector.py  test_serializer.py  test_table_rendering.py  test_tools_cli.py  test_worker_pool_probe.py
tests/fixtures/: fetch.py
